# synapse-astro-editor

./: .gitignore  .mcpbignore  Makefile  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
src/mcp_astro_editor/: SKILL.md  __init__.py  astro_runtime.py  flatten.py  npm_install.py  server.py  site_profile.py  spawn.py  state.py  ui.py  workspace.py
src/mcp_astro_editor/tools/: __init__.py  files.py  git_ops.py  github_api.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
