[project]
name = "mcp-astro-editor"
version = "0.1.0"
description = "Natural-language editor for Astro websites"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
  { name = "NimbleBrain Inc", email = "hello@nimblebrain.ai" },
]
keywords = ["mcp", "astro", "nimblebrain", "editor"]
dependencies = [
  "fastmcp>=2.14.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_astro_editor"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
  "ruff>=0.13.1",
  "ty>=0.0.1a1",
]
